# abacServicek8s

./: README.md  docker-compose.yml
k8s/: trace-runner.Dockerfile  trace_generator.py  trace_player.py  traza_solicitudes_100.csv  traza_solicitudes_1000.csv
k8s/deployments/: xolo-api-deployment.yaml  xolo-client-deployment.yaml
k8s/jobs/: job_create.yaml  job_delete.yaml  job_evaluate-batch.yaml  job_evaluate.yaml  job_get.yaml  job_inject.yaml  job_list.yaml  job_prepare.yaml  job_trace_runner.yaml  job_update.yaml
xolo-client/: .gitignore  Dockerfile  README.md  policies.json  policy_to_inject.json  policy_update.json  politicas_para_test_100.json  pyproject.toml  request.json  requests.json
xolo-client/config/: settings.py
xolo-client/xolo_client/: cli.py  client.py
